Agregar ruta hello

--- a/service/frontend-nginx.conf
+++ b/service/frontend-nginx.conf
@@ -11,4 +11,9 @@ server {
         # The following statement will proxy traffic to the upstream named Backend
         proxy_pass http://Backend;
     }
+
+    location /hello {
+       proxy_pass http://Backend;
+    }
+
 }
